cluster/2_elasticsearch/es-masterdata.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: elastic-smapp
  name: elasticsearch-master
  labels:
    app: elasticsearch
    role: master
spec:
  serviceName: elasticsearch-master
  # This is number of nodes that we want to run
  replicas: 3
  selector:
    matchLabels:
      app: elasticsearch
      role: master
  template:
    metadata:
      labels:
        app: elasticsearch
        role: master
    spec:
      affinity:
        # Try to put each ES data node on a different node in the K8s cluster
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - elasticsearch
                  - key: role
                    operator: In
                    values:
                      - master
                topologyKey: kubernetes.io/hostname

      # spec.template.spec.initContainers
      containers:
        - name: elasticsearch
          image: crazyfrogspb/elastic-smapp
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          livenessProbe:
            tcpSocket:
              port: transport
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /_cluster/health
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
          resources:
            limits:
              memory: 16Gi

          # spec.template.spec.containers[elasticsearch].env
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data

      # spec.template.spec
      volumes:
        - name: config
          configMap:
            name: es-config

  # spec.volumeClaimTemplates
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-storage
        resources:
          requests:
            storage: 800Gi
