cluster/2_elasticsearch/es-data.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: elastic-smapp
  name: es-cluster-data
  labels:
    app: elasticsearch
    role: data
spec:
  serviceName: elasticsearch-data
  replicas: 4
  selector:
    matchLabels:
      app: elasticsearch
      role: data
  template:
    metadata:
      labels:
        app: elasticsearch
        role: data
    spec:
      affinity:
        # Try to put each ES data node on a different node in the K8s cluster
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - elasticsearch
                  - key: role
                    operator: In
                    values:
                      - data
                topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 300

      # spec.template.spec.initContainers
      containers:
        - name: elasticsearch
          image: crazyfrogspb/elastic-smapp
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          livenessProbe:
            tcpSocket:
              port: transport
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /_cluster/health
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          resources:
            limits:
              memory: 16Gi

          # spec.template.spec.containers[elasticsearch].env
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data

      # spec.template.spec
      volumes:
        - name: config
          configMap:
            name: es-config

  # spec.volumeClaimTemplates
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-storage
        resources:
          requests:
            storage: 900Gi
---
apiVersion: v1
kind: Service
metadata:
  namespace: elastic-smapp
  name: elasticsearch-data
  labels:
    app: elasticsearch
    role: data
spec:
  clusterIP: None
  selector:
    app: elasticsearch
    role: data
  ports:
    - port: 9200
      name: http
    - port: 9300
      name: node-to-node
