cluster/2_elasticsearch/es-master.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: elastic-smapp
  name: es-cluster-master
  labels:
    app: elasticsearch
    role: master
spec:
  serviceName: elasticsearch-master
  replicas: 3
  selector:
    matchLabels:
      app: elasticsearch
      role: master
  template:
    metadata:
      labels:
        app: elasticsearch
        role: master
    spec:
      tolerations:
        - key: "nodetype"
          operator: "Equal"
          value: "master"
          effect: "NoSchedule"
      affinity:
        # Try to put each ES master node on a different node in the K8s cluster
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - elasticsearch
                  - key: role
                    operator: In
                    values:
                      - master
                topologyKey: kubernetes.io/hostname
      # spec.template.spec.initContainers
      containers:
        - name: elasticsearch
          image: crazyfrogspb/elastic-smapp
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          livenessProbe:
            tcpSocket:
              port: transport
            initialDelaySeconds: 60
          resources:
            requests:
              cpu: 0.25
            limits:
              cpu: 1
              memory: 1Gi

          # spec.template.spec.containers[elasticsearch].env
          volumeMounts:
            - name: storage
              mountPath: /usr/share/elasticsearch/data

      # spec.template.spec
      volumes:
        - name: config
          configMap:
            name: es-config
        - name: storage
          emptyDir:
            medium: ""
---
apiVersion: v1
kind: Service
metadata:
  namespace: elastic-smapp
  name: elasticsearch-master
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app: elasticsearch
    role: master
spec:
  tolerations:
    - key: "nodetype"
      operator: "Equal"
      value: "master"
      effect: "NoSchedule"
  clusterIP: None
  selector:
    app: elasticsearch
    role: master
  ports:
    - port: 9200
      name: http
    - port: 9300
      name: node-to-node
      protocol: TCP
      targetPort: 9300
  publishNotReadyAddresses: true
  sessionAffinity: None
  type: ClusterIP
