cluster/2_elasticsearch/es-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: elastic-smapp
  name: elasticsearch-loadbalancer
spec:
  selector:
    app: elasticsearch
    role: master
  ports:
  - name: https
    port: 443
    targetPort: 9200
  type: LoadBalancer
