cluster/2_elasticsearch/es-services.yml
apiVersion: v1
kind: Service
metadata:
  namespace: elastic-smapp
  name: elasticsearch-master
  labels:
    app: elasticsearch
    role: master
spec:
  clusterIP: None
  selector:
    app: elasticsearch
    role: master
  ports:
    - port: 9200
      name: http
    - port: 9300
      name: node-to-node
---
apiVersion: v1
kind: Service
metadata:
  namespace: elastic-smapp
  name: elasticsearch
  labels:
    app: elasticsearch
    role: data
spec:
  clusterIP: None
  selector:
    app: elasticsearch
    role: data
  ports:
    - port: 9200
      name: http
    - port: 9300
      name: node-to-node
