cluster/2_elasticsearch/es-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: elastic-smapp
  name: elasticsearch-ingress
  annotations:
    #ingress.kubernetes.io/auth-realm: Authentication Required
    #ingress.kubernetes.io/auth-secret: internal-services-auth
    #ingress.kubernetes.io/auth-type: basic
    #kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: elasticsearch-master
            servicePort: 9200
        - path: /kibana
          backend:
            serviceName: kibana
            servicePort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.0.70
    - 192.168.0.71
    - 192.168.0.102
    - 192.168.0.124
    - 128.122.217.226
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
